<resources>
    <string name="app_name">lib</string>
    <string name="screenshot_of_bug">Screenshot of bug</string>
    <string name="share_edited_screenshot">TODO</string>
    <string name="undo_last_drawing">Undo last drawing</string>
    <string name="confirm">Confirm</string>
    <string name="label_send">Send</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="shapes">Shapes</string>
    <string name="text">Text</string>
    <string name="draw">Draw</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="log_attached">Log attached</string>
    <string name="record_api_level_too_low">You must be running Android M to use screen recording.</string>
    <string name="error_device_storage">Unable to write to device storage.</string>
    <string name="color">Color</string>
    <string name="tool_options_caret_description">Tool options opening caret</string>
    <string name="size">Size</string>
    <string name="shape">Shape</string>
    <string name="rectangle_tool_description">Rectangle tool</string>
    <string name="circle_tool_description">Circle tool</string>
</resources>
