<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/reportActivityConstrainLayout"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="#FFFFFF">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:id="@+id/screenshotHolder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            android:background="@android:color/white"
            android:elevation="5dp"
            android:contentDescription="@string/screenshot_of_bug"/>

    <com.grio.lib.ScreenAnnotator
            android:id="@+id/screenAnnotator"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"/>

    <ImageButton
            android:id="@+id/finishEditing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="5dp"
            android:background="@drawable/circular_confirmation_background"
            android:contentDescription="@string/share_edited_screenshot"/>

    <ImageButton
            android:id="@+id/undo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:elevation="5dp"
            android:background="@drawable/circular_undo_background"
            android:contentDescription="@string/undo_last_drawing"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineTop"
            app:layout_constraintGuide_percent=".125"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineBottom"
            app:layout_constraintGuide_percent=".875"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineStart"
            app:layout_constraintGuide_percent=".125"
            android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guidelineEnd"
            app:layout_constraintGuide_percent=".875"
            android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>